[project]
authors = [
    {name = "Tryolabs", email = "hello@tryolabs.com"},
]
license = {text = "BSD-3-Clause"}
requires-python = "<4.0,>=3.8"
name = "norfair"
version = "2.2.0"
description = "Lightweight Python library for adding real-time multi-object tracking to any detector."
readme = "README.md"
keywords = [
    "tracking",
    "object-detection",
    "object-tracking",
    "kalman-filter",
    "pose-estimation",
    "re-identification",
    "multi-object-tracking",
    "re-id",
    "tracking-algorithm",
    "deepsort",
    "video-tracking",
    "video-inference-loop",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "filterpy<2.0.0,>=1.4.5",
    "rich<14.0.0,>=9.10.0",
    "scipy>=1.5.4",
    "numpy<2.0.0,>=1.19.0; python_version < \"3.8\"",
    "numpy<2.0.0,>=1.23.0; python_version >= \"3.8\"",
    "importlib-metadata==4.8.3; python_version < \"3.8\"",
]

[project.urls]
repository = "https://github.com/tryolabs/norfair"

[project.optional-dependencies]
video = [
    "opencv-python<5.0.0,>=3.2.0",
]
metrics = [
    "motmetrics==1.4.0",
]

[dependency-groups]
test = [
    "pylint<3.0.0,>=2.12.0",
    "pytest<9.0.0,>=6.2.5",
    "tox<4.0.0,>=3.26.0",
]
dev = [
    "black<23.0.0,>=22.12.0",
    "isort<6.0.0,>=5.10.1",
]

[tool.poetry]
requires-poetry = ">=2.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
